# wave

./: Cargo.toml
examples/: common.rs  empty.rs  particle.rs  standing.rs
src/: compute.hlsl  lib.rs  main.rs  observer.rs  renderer.rs  shader.hlsl  simulation.rs  simulation_runner.rs
