[package]
edition = "2021"
name = "wave"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alexandria = {git = "https://github.com/shipsimfan/alexandria.git"}
colosseum = {git = "https://github.com/shipsimfan/colosseum.git"}
